[package]
name = "robin"
version = "0.0.1"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
repository = "https://github.com/davidpdrsn/robin.git"
homepage = "https://github.com/davidpdrsn/robin"
license = "MIT"
readme = "README.md"
description = "Background jobs for Rust"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.11"
redis = "0.8.0"
uuid = { version = "0.6", features = ["v4"] }
enum-each-variant-derive = "0.1.2"

[lib]
name = "robin"
path = "src/lib.rs"

[[example]]
name = "client_and_worker"
